--- a/root/etc/skel/.config/neofetch/config.conf
+++ b/root/etc/skel/.config/neofetch/config.conf
@@ -5,7 +5,7 @@ print_info() {
     info underline
 
     info "OS" distro
-    #info "Host" model
+    info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
     info "Packages" packages
@@ -22,17 +22,17 @@ print_info() {
     info "GPU" gpu
     info "Memory" memory
 
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
+    info "GPU Driver" gpu_driver
+    info "CPU Usage" cpu_usage
+    info "Disk" disk
     # info "Battery" battery
-    # info "Font" font
+    info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
+    # info "Locale" locale
 
     info cols
 }
@@ -117,6 +117,18 @@ uptime_shorthand="on"
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
 memory_percent="on"
+
+# Change memory output unit.
+#
+# Default: 'mib'
+# Values:  'kib', 'mib', 'gib'
+# Flag:    --memory_unit
+#
+# Example:
+# kib  '1020928KiB / 7117824KiB'
+# mib  '1042MiB / 6951MiB'
+# gib: ' 0.98GiB / 6.79GiB'
+memory_unit="GiB"
 
 
 # Packages
@@ -449,6 +461,8 @@ disk_percent="on"
 # mpd
 # muine
 # netease-cloud-music
+# olivia
+# playerctl
 # pogo
 # pragha
 # qmmp
@@ -458,6 +472,7 @@ disk_percent="on"
 # smplayer
 # spotify
 # strawberry
+# tauonmb
 # tomahawk
 # vlc
 # xmms2d
@@ -575,7 +590,7 @@ block_range=(0 15)
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --color_blocks
-color_blocks="on"
+color_blocks="off"
 
 # Color block width in spaces
 #
@@ -677,14 +692,9 @@ disk_display="off"
 #
 # Default:  'ascii'
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
-#           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
+#           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-
-# Choose next line to have ascii - do not forget to hashtag out the image_source 10 lines down
 image_backend="ascii"
-
-# Choose next line to have the logo - do not forget to delete the hashtag of one of the image_sources 10 lines down
-#image_backend="w3m"
 
 # Image Source
 #
@@ -698,38 +708,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-#image_source="auto"
-#image_source=$HOME/".config/neofetch/arcolinux-blue-dark.png"
-#image_source=$HOME/".config/neofetch/arcolinux.png"
-#image_source=$HOME/".config/neofetch/arcolinux-arc.png"
-#image_source=$HOME/".config/neofetch/arcolinux-black.png"
-#image_source=$HOME/".config/neofetch/arcolinux-blue.png"
-#image_source=$HOME/".config/neofetch/arcolinux-blue-dark.png"
-#image_source=$HOME/".config/neofetch/arcolinux-blue-darker.png"
-#image_source=$HOME/".config/neofetch/arcolinux-evopop.png"
-#image_source=$HOME/".config/neofetch/arcolinux-froly.png"
-#image_source=$HOME/".config/neofetch/arcolinux-golden.png"
-#image_source=$HOME/".config/neofetch/arcolinux-green.png"
-#image_source=$HOME/".config/neofetch/arcolinux-havelock.png"
-#image_source=$HOME/".config/neofetch/arcolinux-hibiscus.png"
-#image_source=$HOME/".config/neofetch/arcolinux-mandy.png"
-#image_source=$HOME/".config/neofetch/arcolinux-mantis.png"
-#image_source=$HOME/".config/neofetch/arcolinux-niagara.png"
-#image_source=$HOME/".config/neofetch/arcolinux-numix.png"
-#image_source=$HOME/".config/neofetch/arcolinux-orchid.png"
-#image_source=$HOME/".config/neofetch/arcolinux-paper.png"
-#image_source=$HOME/".config/neofetch/arcolinux-violet.png"
-#image_source=$HOME/".config/neofetch/arcolinux-polo.png"
-#image_source=$HOME/".config/neofetch/arcolinux-punch.png"
-#image_source=$HOME/".config/neofetch/arcolinux-smoke.png"
-#image_source=$HOME/".config/neofetch/arcolinux-tacao.png"
-#image_source=$HOME/".config/neofetch/arcolinux-tory.png"
-#image_source=$HOME/".config/neofetch/arcolinux-white.png"
-#image_source=$HOME/".config/neofetch/medallion-gold.png"
-#image_source=$HOME/".config/neofetch/medallion-silver.png"
-#image_source=$HOME/".config/neofetch/medallion-bronze.png"
-#image_source=$HOME/".config/neofetch/medallion-white.png"
-#image_source=$HOME/".config/neofetch/medallion-blue.png"
+image_source="auto"
 
 
 # Ascii Options
@@ -741,34 +720,34 @@ image_backend="ascii"
 # Default: 'auto'
 # Values:  'auto', 'distro_name'
 # Flag:    --ascii_distro
-# NOTE: AIX, Alpine, Anarchy, Android, Antergos, antiX, AOSC,
-#       Apricity, ArcoLinux, ArchBox, ARCHlabs, ArchStrike,
-#       XFerience, ArchMerge, Arch, Artix, Arya, Bedrock, Bitrig,
-#       BlackArch, BLAG, BlankOn, BlueLight, bonsai, BSD,
+# NOTE: AIX, Alpine, Anarchy, Android, Antergos, antiX, "AOSC OS",
+#       "AOSC OS/Retro", Apricity, ArcoLinux, ArchBox, ARCHlabs,
+#       ArchStrike, XFerience, ArchMerge, Arch, Artix, Arya, Bedrock,
+#       Bitrig, BlackArch, BLAG, BlankOn, BlueLight, bonsai, BSD,
 #       BunsenLabs, Calculate, Carbs, CentOS, Chakra, ChaletOS,
 #       Chapeau, Chrom*, Cleanjaro, ClearOS, Clear_Linux, Clover,
 #       Condres, Container_Linux, CRUX, Cucumber, Debian, Deepin,
-#       DesaOS, Devuan, DracOS, DragonFly, Drauger, Elementary,
+#       DesaOS, Devuan, DracOS, DarkOs, DragonFly, Drauger, Elementary,
 #       EndeavourOS, Endless, EuroLinux, Exherbo, Fedora, Feren, FreeBSD,
-#       FreeMiNT, Frugalware, Funtoo, GalliumOS, Gentoo, Pentoo,
-#       gNewSense, GNU, GoboLinux, Grombyang, Guix, Haiku, Huayra,
+#       FreeMiNT, Frugalware, Funtoo, GalliumOS, Garuda, Gentoo, Pentoo,
+#       gNewSense, GNOME, GNU, GoboLinux, Grombyang, Guix, Haiku, Huayra,
 #       Hyperbola, janus, Kali, KaOS, KDE_neon, Kibojoe, Kogaion,
 #       Korora, KSLinux, Kubuntu, LEDE, LFS, Linux_Lite,
 #       LMDE, Lubuntu, Lunar, macos, Mageia, MagpieOS, Mandriva,
 #       Manjaro, Maui, Mer, Minix, LinuxMint, MX_Linux, Namib,
 #       Neptune, NetBSD, Netrunner, Nitrux, NixOS, Nurunner,
-#       NuTyX, OBRevenge, OpenBSD, OpenIndiana, OpenMandriva,
-#       OpenWrt, osmc, Oracle, PacBSD, Parabola, Pardus, Parrot,
-#       Parsix, TrueOS, PCLinuxOS, Peppermint, popos, Porteus,
-#       PostMarketOS, Proxmox, Puppy, PureOS, Qubes, Radix, Raspbian,
-#       Reborn_OS, Redstar, Redcore, Redhat, Refracted_Devuan, Regata,
-#       Rosa, sabotage, Sabayon, Sailfish, SalentOS, Scientific, Septor,
-#       SharkLinux, Siduction, Slackware, SliTaz, SmartOS, Solus,
-#       Source_Mage, Sparky, Star, SteamOS, SunOS, openSUSE_Leap,
-#       openSUSE_Tumbleweed, openSUSE, SwagArch, Tails, Trisquel,
-#       Ubuntu-Budgie, Ubuntu-GNOME, Ubuntu-MATE, Ubuntu-Studio, Ubuntu,
-#       Void, Obarun, windows10, Windows7, Xubuntu, Zorin, and IRIX
-#       have ascii logos
+#       NuTyX, OBRevenge, OpenBSD, openEuler, OpenIndiana, openmamba,
+#       OpenMandriva, OpenStage, OpenWrt, osmc, Oracle, OS Elbrus, PacBSD,
+#       Parabola, Pardus, Parrot, Parsix, TrueOS, PCLinuxOS, Peppermint,
+#       popos, Porteus, PostMarketOS, Proxmox, Puppy, PureOS, Qubes, Radix,
+#       Raspbian, Reborn_OS, Redstar, Redcore, Redhat, Refracted_Devuan,
+#       Regata, Rosa, sabotage, Sabayon, Sailfish, SalentOS, Scientific,
+#       Septor, SereneLinux, SharkLinux, Siduction, Slackware, SliTaz,
+#       SmartOS, Solus, Source_Mage, Sparky, Star, SteamOS, SunOS,
+#       openSUSE_Leap, openSUSE_Tumbleweed, openSUSE, SwagArch, Tails,
+#       Trisquel, Ubuntu-Budgie, Ubuntu-GNOME, Ubuntu-MATE, Ubuntu-Studio,
+#       Ubuntu, Venom, Void, Obarun, windows10, Windows7, Xubuntu, Zorin,
+#       and IRIX have ascii logos
 # NOTE: Arch, Ubuntu, Redhat, and Dragonfly have 'old' logo variants.
 #       Use '{distro name}_old' to use the old logos.
 # NOTE: Ubuntu has flavor variants.
@@ -847,7 +826,7 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="300px"
+image_size="auto"
 
 # Gap between image and text
 #
@@ -863,8 +842,8 @@ gap=3
 # Values:  'px'
 # Flags:   --xoffset
 #          --yoffset
-yoffset=10
-xoffset=10
+yoffset=0
+xoffset=0
 
 # Image background color
 # Only works with the w3m backend.
